package model.data.additional;

import model.data.DatumQueryService;

public class URL extends LiteralString {
    public URL(String value, DatumQueryService queryService) {
        super(value, queryService);
    }
}
