@startuml

title __ADDITIONAL's Class Diagram__\n

  namespace model.data {
    namespace additional {
      abstract class model.data.additional.AbstractAdditional {
          + parse()
          # AbstractAdditional()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.CommonsMedia {
          + CommonsMedia()
          + getImage()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.ExternalIdentifier {
          + ExternalIdentifier()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.GeographicShape {
          + GeographicShape()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.GlobeCoordinate {
          - posLat : double
          - posLong : double
          + GlobeCoordinate()
          + GlobeCoordinate()
          + getDescription()
          + getStatements()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.LiteralString {
          # value : String
          + LiteralString()
          + getDescription()
          + getID()
          + getStatements()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.MathematicalExpression {
          + MathematicalExpression()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.MonolingualText {
          - language : String
          - text : String
          + MonolingualText()
          + MonolingualText()
          + getDescription()
          + getID()
          + getStatements()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.MusicalNotation {
          + MusicalNotation()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.Quantity {
          - amount : String
          + Quantity()
          + getDescription()
          + getID()
          + getStatements()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.TabularData {
          + TabularData()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.Time {
          # time : String
          + Time()
          + Time()
          + getDescription()
          + getID()
          + getStatements()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace additional {
      class model.data.additional.URL {
          + URL()
      }
    }
  }
  

  model.data.additional.AbstractAdditional -up-|> model.data.Value
  model.data.additional.CommonsMedia -up-|> model.data.additional.LiteralString
  model.data.additional.ExternalIdentifier -up-|> model.data.additional.LiteralString
  model.data.additional.GeographicShape -up-|> model.data.additional.LiteralString
  model.data.additional.GlobeCoordinate -up-|> model.data.additional.AbstractAdditional
  model.data.additional.LiteralString -up-|> model.data.additional.AbstractAdditional
  model.data.additional.MathematicalExpression -up-|> model.data.additional.LiteralString
  model.data.additional.MonolingualText -up-|> model.data.additional.AbstractAdditional
  model.data.additional.MusicalNotation -up-|> model.data.additional.LiteralString
  model.data.additional.Quantity -up-|> model.data.additional.AbstractAdditional
  model.data.additional.Quantity o-- model.data.pages.Item : unit
  model.data.additional.TabularData -up-|> model.data.additional.LiteralString
  model.data.additional.Time -up-|> model.data.additional.AbstractAdditional
  model.data.additional.URL -up-|> model.data.additional.LiteralString


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
